@@ -29,6 +29,9 @@ Misc:
  - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
  - account for raw search in AICallback::GetPathLength
  - remove LuaShaders config-setting
+ - change PitchAdjust config-setting from a boolean to an integer
+   0 disables, 1 scales pitch by the square root of game speed, 2
+   scales linearly with game speed
 
 Fixes:
  - fix #5803 (move goals cancelled when issued onto blocked terrain)
